add reverse option

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
           <input id="input" type="text">
         </div>
 
-        <button type="submit" class="btn">Lets Play!</button>
+        <button id=play type="submit" class="btn">Lets Play!</button>
+        <button id=reverse type="submit" class="btn">Go backwards!</button>
       </form>
+
 
       <div id="result">
         <ul id="game"></ul>
