--- a/index.html
+++ b/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.0.js"></script>
     <script src="js/scripts.js"></script>
     <title>Ping Pong</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Ping Pong</h1>
-
-      <form id="ping-pong">
-        <div class="form-group">
-          <label for="input">Enter a number</label>
-          <input id="input" type="text">
+</head>
+<body>
+    <div class="panel panel-info-custom">
+        <div class="panel-body">
+            <h1>Ping Pong</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="panel panel-user">
+                <div class="panel-body">
+                    <div class="user-name">
+                        <h2>Happy Player<h2>
+  			            </div>
+                    <div id="ping-score">
+       						    <p id="ping-score"></p>
+       					    </div>
+                    <div id="pong-score" >
+       						    <p id="pong-score"></p>
+    				        </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="panel panel-form">
+                <div class="panel-body">
+                    <form id="ping-pong">
+                        <div class="form-group">
+                            <h3>Let's play!</h3>
+                            <h4>Rules</h4>
+                            <p>Ping Pong will count to your number with following exceptions</p>
+                            <ul>
+                              <li>Numbers divisible by 3 will count as "ping"</li>
+                              <li>Numbers divisible by 5 will count as "pong"</li>
+                              <li>Numbers divisible by both 3 and 5 will count as "ping-pong"</li>
+                            </ul>
+                            <label for="input">Enter your number</label>
+                            <input id="input" type="text">
+                        </div>
+                        <button id=play type="submit" class="btn">Lets Play!</button>
+                        <button id=reverse type="submit" class="btn">Go backwards!</button>
+                    </form>
+                    <div id="result">
+                        <ul id="game"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <button id=play type="submit" class="btn">Lets Play!</button>
-        <button id=reverse type="submit" class="btn">Go backwards!</button>
-      </form>
-
-
-      <div id="result">
-        <ul id="game"></ul>
-
-      </div>
     </div>
   </body>
 </html>
